Meta: Allow dirty submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "godwit"]
 	path = godwit
 	url = https://github.com/Passeriform/GodWit
+	ignore = dirty
 [submodule "godwit-daemon"]
 	path = godwit-daemon
 	url = https://github.com/Passeriform/GodWit-Daemon
+	ignore = dirty
